--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,8 @@ jobs:
       #     # Exit with 1 when it find at least one finding.
       #     fail_on_error: true
   pr-release:
+    permissions:
+      packages: write
     if: contains(github.event.pull_request.labels.*.name, 'safe to test')
     runs-on: ubuntu-latest
     needs: unittest
