--- a/.github/workflows/dev-nightlies.yml
+++ b/.github/workflows/dev-nightlies.yml
@@ -35,8 +35,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: iptecharch-builder
-          password: ${{ secrets.IPTECHARCH_GITHUB_PAT }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
@@ -46,4 +46,4 @@ jobs:
           version: latest
           args: release --clean -f .goreleaser.nightlies.yml --skip=validate
         env:
-          GITHUB_TOKEN: ${{ secrets.IPTECHARCH_GITHUB_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
