--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,3 +20,5 @@ updates:
           go-dependencies:
               patterns:
                   - "*"
+              exclude-patterns:
+                  - "sigs.k8s.io/controller-runtime"
