--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,30 +1,59 @@
 version: 2
 project_name: config-server
 builds:
-  - id: config-server
-    binary: config-server
-    main: ./main.go
+  - id: api-server
+    binary:  api-server
+    main: ./cmd/api-server/main.go
     env:
       - CGO_ENABLED=0
     goos:
       - linux
     goarch:
       - amd64
+      - arm64
+  - id: controller
+    binary: controller
+    main: ./cmd/controller/main.go
+    env:
+      - CGO_ENABLED=0
+    goos:
+      - linux
+    goarch:
+      - amd64
+      - arm64
 dockers:
-  - goos: linux
+  - id: api-server-docker
+    goos: linux
     goarch: amd64
     ids:
-      - config-server
+      - api-server
     image_templates:
-      - "ghcr.io/sdcio/{{ .ProjectName }}:v{{ .Version }}"
-      - "ghcr.io/sdcio/{{ .ProjectName }}:latest"
-    dockerfile: goreleaser.dockerfile
+      - "ghcr.io/sdcio/{{ .ProjectName }}-api-server:v{{ .Version }}"
+      - "ghcr.io/sdcio/{{ .ProjectName }}-api-server:latest"
+    dockerfile: goreleaser.api-server.dockerfile
     skip_push: false
     build_flag_templates:
       - "--pull"
       - "--build-arg=USERID=10000"
       - "--label=org.opencontainers.image.created={{.Date}}"
-      - "--label=org.opencontainers.image.title={{.ProjectName}}"
+      - "--label=org.opencontainers.image.title={{.ProjectName}}-api-server"
+      - "--label=org.opencontainers.image.source=https://github.com/sdcio/{{.ProjectName}}"
+      - "--label=org.opencontainers.image.version=v{{.Version}}"
+  - id: controller-docker
+    goos: linux
+    goarch: amd64
+    ids:
+      - controller
+    image_templates:
+      - "ghcr.io/sdcio/{{ .ProjectName }}-controller:v{{ .Version }}"
+      - "ghcr.io/sdcio/{{ .ProjectName }}-controller:latest"
+    dockerfile: goreleaser.controller.dockerfile
+    skip_push: false
+    build_flag_templates:
+      - "--pull"
+      - "--build-arg=USERID=10000"
+      - "--label=org.opencontainers.image.created={{.Date}}"
+      - "--label=org.opencontainers.image.title={{.ProjectName}}-controller"
       - "--label=org.opencontainers.image.source=https://github.com/sdcio/{{.ProjectName}}"
       - "--label=org.opencontainers.image.version=v{{.Version}}"
 archives:
